log
Fri, Mar 28, 2025 11:53:41 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025 12:03:50 PM: 
 list.c | 33 +++++++++++++++++++++++++++++++--
 1 file changed, 31 insertions(+), 2 deletions(-)
 tests:  0|0
79cb3f0
Fri, Mar 28, 2025 12:08:34 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:55:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:49:8: note: declared here
 void * nextList(List * list) {
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fdc2bd6
Fri, Mar 28, 2025 12:09:14 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5552a53
Fri, Mar 28, 2025 12:13:54 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b9136b7
Fri, Mar 28, 2025 12:14:38 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
64bfc49
Fri, Mar 28, 2025 12:16:47 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ae1d070
Fri, Mar 28, 2025 12:19:24 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
521dc5b
Fri, Mar 28, 2025  8:59:58 PM: 
 tests:  9|3
total_score: 35/70
146f260
Fri, Mar 28, 2025  9:23:36 PM: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  9|3
total_score: 35/70
2bc5dcf
Fri, Mar 28, 2025  9:25:03 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
ba0c81c
Fri, Mar 28, 2025 10:07:55 PM: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:107:17: error: 'return' with a value, in function returning void [-Werror]
         return  NULL;
                 ^~~~
list.c:103:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
19d6922
Fri, Mar 28, 2025 10:14:18 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
174b643
Fri, Mar 28, 2025 10:21:17 PM: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  10|2
total_score: 45/70
6402ca0
Fri, Mar 28, 2025 10:23:23 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
48fb723
Fri, Mar 28, 2025 10:26:35 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
2ed1d69
Fri, Mar 28, 2025 10:35:28 PM: 
 list.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
59cd158
Fri, Mar 28, 2025 10:36:30 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|0
total_score: 70/70
929f959
Fri, Mar 28, 2025 10:41:24 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|1
total_score: 55/70
a7ae944
